--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        this is a n ew phase
+        this is a new phase
     </p>
+    <i>Lorem ipsum dolor sit, amet consectetur adipisicing.</i>
 </body>
 </html>
