--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
         this is a new phase
     </p>
     <i>Lorem ipsum dolor sit, amet consectetur adipisicing.</i>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
